# todo

./: Cargo.toml  README.md  todo.db
.github/workflows/: release.yml  test.yml
src/: args.rs  data_handler.rs  database.rs  lib.rs  main.rs  todo.db  views.rs
