[package]
name = "todo"
version = "0.1.0"
edition = "2021"
author = "Ahmed Hagi <ahmedosman@mac.com>"
about = "A simple cli todo tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.28.0"
clap = { version = "4.1.6", features = ["derive"] }
time = "0.3.20"
tabled = "0.10.0"
chrono = "0.4.23"
prettytable-rs = "0.10.0"
