[package]
name = "todo"
version = "0.5.0"
edition = "2021"
author = "Ahmed Hagi <ahmedosman@mac.com>"
about = "A simple cli todo tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
time = "0.3"
tabled = "0.16"
chrono = "0.4"
prettytable-rs = "0.10"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
